# macro_builder

./: .gitignore  .pre-commit-config.yaml  README.md  generated_execute_script.py  generated_gui.py  generated_script.py  loc_counter.sh  manage.py  mypy.ini  package.json  pyproject.toml
.devcontainer/: Dockerfile.dev  devcontainer.json
common/: README.md  constant.py  domain.py  response_msg.py
common/infra/token/: backend_token_manager.py  backend_token_parser.py  token.py
common/interface/: response.py  validators.py
common/middleware/: error_handler.py
common/service/: paging.py
common/service/token/: exception.py  i_token_manager.py  i_token_parser.py
common/utils/: base.py
macro_be/: asgi.py  settings.py  urls.py  views.py  wsgi.py
macro_sheet/: apps.py
macro_sheet/domain/: block_serializer.py  registry.py
macro_sheet/domain/Function/: block_function.py  function_block.py
macro_sheet/domain/block/: action_block.py  block.py  condition_block.py  control_block.py  reference_block.py
macro_sheet/domain/flowsheet/: flowsheet.py
macro_sheet/infra/: ko_law_api_server.py  models.py  packing_server.py  pyqt_command_gui_server.py  s3.py  s3_package_storage.py  s3_recorder_storage.py
macro_sheet/interface/: urls.py  views.py
macro_sheet/service/: __init__.py  block_service.py  exceptions.py  gui_service.py  i_ko_law_api_server.py  macro_sheet_service.py  services.py  validators.py
macro_sheet/usecase/: __init__.py  block_function_usecase.py  gui_usecase.py  worksheet_usecase.py
user/domain/: user.py  user_role.py  user_token.py
user/interface/: urls.py
user/migrations/: 0001_initial.py
user/service/: user_service.py
util/: domain.excalidraw  pydantic_serializer.py  sandbox.excalidraw
(+127 files in other folders)
