[tool.poetry]
name = "macro_be"
version = "0.1.0"
description = ""
authors = ["gmyun1999 <dbsrbals26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.0.6"
django-environ = "0.11.2"
django-dotenv = "1.4.2"
PyJWT = "2.8.0"
pydantic = "2.7.4"
djangorestframework = "^3.15.2"
pymysql = "^1.1.1"
types-pymysql = "^1.1.0.20240524"
django-cors-headers = "^4.4.0"
arrow = "^1.3.0"
dacite = "^1.8.1"
httpx = "^0.27.2"
ulid-py = "^1.1.0"
jinja2 = "^3.1.4"
asgiref = "^3.8.1"
django-cte = "^1.3.3"
django-extensions = "^3.2.3"
pydot = "^3.0.2"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
drf-yasg = "^1.21.8"
whitenoise = "^6.8.2"
drf-spectacular = "^0.27.2"
boto3 = "^1.35.72"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
